--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BattleFRONT</title>
 </head>
+
 <body>
-  
+
+  <header>
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+
 </body>
+
 </html>
