--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </main>
 
   <footer>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid ms-3">
       <a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
       <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
