--- a/index.html
+++ b/index.html
@@ -1,87 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
-  <title>BattleFRONT</title>
-</head>
-
-<body>
-
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-      <div class="container-fluid ms-3">
-        <a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
-        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <main>
-    <section class="principal mt-5 pt-4 text-center">
-      <!--Alteração de margin e padding é aqui-->
-      <h2 class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">Feito por devs, para devs!
-      </h2>
-      <p class="description fs-3">Desafie-se e entre no mundo do web desenvolvimento de forma gratuita, com as
-          ferramentas
-          mais utilizadas
-          pelos
-          desenvolvedores na atualidade.</p>
-      <p class="description fs-3">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios
-          exclusivos para seu
-          portfólio.
-      </p>
-  </section>
-  </main>
-
-  <footer>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <title>BattleFRONT</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
         <div class="container-fluid ms-3">
-      <a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-      <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Recuperação de Senha</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Quem somos nós</a>
-          </li>
-        </ul>
-      </div>
-      </div>
-    </nav>
-  </footer>
+          <a class="navbar-brand font-monospace fw-bold" href="./index.html"
+            >BattleFRONT</a
+          >
+          <button
+            class="navbar-toggler me-2"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end me-3"
+            id="navbarNavAltMarkup"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./assets/view/html/produtos.html"
+                  >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./assets/view/html/Cadastro.html"
+                  >Cadastro</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./assets/view/html/Login.html"
+                  >Login</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-</body>
+    <main>
+      <section class="principal mt-5 pt-4 text-center">
+        <!--Alteração de margin e padding é aqui-->
+        <h2
+          class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1"
+        >
+          Feito por devs, para devs!
+        </h2>
+        <p class="description fs-3">
+          Desafie-se e entre no mundo do web desenvolvimento de forma gratuita,
+          com as ferramentas mais utilizadas pelos desenvolvedores na
+          atualidade.
+        </p>
+        <p class="description fs-3">
+          Se estiver disposto a aprender mais, também contamos com conteúdos e
+          desafios exclusivos para seu portfólio.
+        </p>
+      </section>
+    </main>
 
+    <footer class="fixed-bottom bg-light p-3 text-center">
+      <p class="m-0 font-monospace">
+        <a> BattleFRONT &#169; - 2022 - all rights reserved</a>
+      </p>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
