--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/view/img/bfront.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/view/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -40,6 +42,13 @@
                   class="nav-link active d-flex justify-content-center"
                   href="./assets/view/html/produtos.html"
                   >Serviços</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-center"
+                  href="./assets/view/html/contato.html"
+                  >Contato</a
                 >
               </li>
               <li class="nav-item">
@@ -82,7 +91,7 @@
       </section>
     </main>
 
-    <footer class="fixed-bottom bg-light p-3 text-center">
+    <footer class="fixed-bottom bg-light p-3 text-center font-monospace">
       <p class="m-0 font-monospace">
         <a> BattleFRONT &#169; - 2022 - all rights reserved</a>
       </p>
