--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./assets/view/img/img_logo.png"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -14,7 +15,6 @@
 </head>
 
 <body>
-
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
       <div class="container-fluid ms-3">
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -46,40 +49,19 @@
       <h2 class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">Feito por devs, para devs!
       </h2>
       <p class="description fs-3">Desafie-se e entre no mundo do web desenvolvimento de forma gratuita, com as
-          ferramentas
-          mais utilizadas
-          pelos
-          desenvolvedores na atualidade.</p>
+        ferramentas
+        mais utilizadas
+        pelos
+        desenvolvedores na atualidade.</p>
       <p class="description fs-3">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios
-          exclusivos para seu
-          portfólio.
+        exclusivos para seu
+        portfólio.
       </p>
-  </section>
+    </section>
   </main>
 
-  <footer>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid ms-3">
-      <a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-      <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Recuperação de Senha</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center" href="#">Quem somos nós</a>
-          </li>
-        </ul>
-      </div>
-      </div>
-    </nav>
+  <footer class="fixed-bottom bg-light p-1 text-center">
+    <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
   </footer>
 
 </body>
