--- a/index.html
+++ b/index.html
@@ -1,106 +1,153 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/view/img/bfront.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/view/css/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <title>BattleFRONT</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-        <div class="container-fluid ms-3">
-          <a class="navbar-brand font-monospace fw-bold" href="./index.html"
-            >BattleFRONT</a
-          >
-          <button
-            class="navbar-toggler me-2"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end me-3"
-            id="navbarNavAltMarkup"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="./assets/view/html/produtos.html"
-                  >Serviços</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="./assets/view/html/contato.html"
-                  >Contato</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="./assets/view/html/Cadastro.html"
-                  >Cadastro</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active d-flex justify-content-center"
-                  href="./assets/view/html/Login.html"
-                  >Login</a
-                >
-              </li>
-            </ul>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./assets/view/img/img_logo.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <title>BattleFRONT</title>
+</head>
+
+<body>
+
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <div class="container-fluid ms-3">
+        <a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
+        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main class="main">
+    <section class="principal mt-5 pt-4 text-center">
+      <div class="slogan-description flex">
+        <img id="logo-central" class="text-center" src="./assets/view/img/img_logo.png">
+        <h2 class="slogan subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">BattleFRONT<br>Feito por
+          devs, para devs!
+        </h2>
+        <p class="fs-3">Desafie-se e entre no mundo do web desenvolvimento de forma gratuita, com as
+          ferramentas mais utilizadas pelos desenvolvedores na atualidade.</p>
+        <p class="fs-3">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios exclusivos para
+          seu portfólio. </p>
+      </div>
+      <div class="container-cards">
+        <div class="cards">
+          <div class="card-body">
+            <h5>Play anywhere</h5>
+            <p class="card-text">
+              Com BattleFRONT, você pode resolver os desafios propostos em qualquer lugar, a qualquer hora.
+            </p>
           </div>
         </div>
-      </nav>
-    </header>
 
-    <main>
-      <section class="principal mt-5 pt-4 text-center">
-        <!--Alteração de margin e padding é aqui-->
-        <h2
-          class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1"
-        >
-          Feito por devs, para devs!
+        <div class="cards">
+          <div class="card-body">
+            <h5>Totalmente intuitivo</h5>
+            <br class="card-text">
+            A implementação do método ELI5 faz toda diferença na hora de aprender conceitos e</br>
+            termos mais técnicos, trazendo exemplos de forma simples e de fácil assimilação com o seu dia-a-dia.
+            </p>
+          </div>
+        </div>
+    </section>
+
+    <div class="cadastro">
+      <div class="cadastro-body">
+        <h4>Cadastre-se aqui:</h4>
+        <p class="cadastro-text">
+          <a id="contato" href="./assets/view/html/Cadastro.html">CADASTRO</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="accordion accordion-flush" id="perguntas">
+      <h4>Tem alguma dúvida? Visite nossa sessão de perguntas frequentes!</h4>
+      <br>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            O que é a BattleFRONT?
+          </button>
         </h2>
-        <p class="description fs-3">
-          Desafie-se e entre no mundo do web desenvolvimento de forma gratuita,
-          com as ferramentas mais utilizadas pelos desenvolvedores na
-          atualidade.
-        </p>
-        <p class="description fs-3">
-          Se estiver disposto a aprender mais, também contamos com conteúdos e
-          desafios exclusivos para seu portfólio.
-        </p>
-      </section>
-    </main>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            A BattleFRONT é uma plataforma de testes voltada aos desenvolvedores front-end que estão no começo da
+            carreira ou já atuam na área. Com a finalidade de desenvolver o raciocínio lógico através de problemas de
+            forma descomplicada, sendo nosso diferencial essa forma simples de resolução dos exercícios propostos, que
+            podem ser resolvidos por pessoas de diversas idades com a mesma didática.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Quais são os planos?
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            Trabalhamos com três modelos de planos, sendo um gratuito e dois pagos, sendo que cada um fornece vantagens
+            e benefícios exclusivos. Dessa forma, conseguimos verificar o desempenho de cada aluno e seu grau de
+            conhecimento, para que assim possamos fornecer desafios exclusivos de acordo com a escalabilidade de
+            conhecimento.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Como é feito o pagamento?
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            Trabalhamos com cartões de todas as bandeiras, PIX, boleto bancário, débito automático, depósito e
+            transferência. O pagamento é realizado mensalmente e o aluno tem acesso a todo o programa didático do plano
+            escolhido. São três: O Gratuito, o Intermediário, no valor de R$19,90 mensais, e o Premium, no valor de
+            R$29,90.
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <footer class="fixed-bottom bg-light p-3 text-center font-monospace">
-      <p class="m-0 font-monospace">
-        <a> BattleFRONT &#169; - 2022 - all rights reserved</a>
-      </p>
-    </footer>
+  <footer class="fixed-bottom bg-light p-1 text-center">
+    <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </footer>
+
+</body>
+
 </html>
