--- a/index.html
+++ b/index.html
@@ -1,59 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./assets/view/img/img_logo.png" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
+  <link rel="shortcut icon" href="./assets/view/img/img_logo.png" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/view/css/style.css" />
   <title>BattleFRONT</title>
 </head>
-
 <body>
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-      <div class="container-fluid ms-3">
-        <a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
-        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
+      <section class="container-fluid">
+        <a class="navbar-brand texto-barra-navegacao" href="./index.html">
+          <img class="logo-barranav" src="./assets/view/img/img_logo.png" alt="Logo BattleFRONT">
+          BattleFRONT</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavAltMarkup"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
+              <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="./assets/view/html/produtos.html"
+                >Serviços</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+              <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="./assets/view/html/contato.html"
+                >Contato</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
+              <a
+                class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                href="./assets/view/html/Cadastro.html"
+                >Cadastro</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
+              <a
+                class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                href="./assets/view/html/Login.html"
+                >Login</a
+              >
             </li>
           </ul>
         </div>
-      </div>
+      </section>
     </nav>
   </header>
 
   <main class="main">
     <section class="principal mt-5 pt-4 text-center">
-      <div class="slogan-description flex">
-        <img id="logo-central" class="text-center" src="./assets/view/img/img_logo.png">
-        <h2 class="slogan subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">BattleFRONT<br>Feito por
-          devs, para devs!
-        </h2>
-        <p class="fs-3">Desafie-se e entre no mundo do web desenvolvimento de forma gratuita, com as
+      <div class="">
+        <h2 class="">BattleFRONT, Feito por devs, para devs!</h2>
+        <p class="">Desafie-se e entre no mundo do web desenvolvimento de forma gratuita, com as
           ferramentas mais utilizadas pelos desenvolvedores na atualidade.</p>
-        <p class="fs-3">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios exclusivos para
+        <p class="">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios exclusivos para
           seu portfólio. </p>
       </div>
       <div class="container-cards">
@@ -69,9 +85,8 @@
         <div class="cards">
           <div class="card-body">
             <h5>Totalmente intuitivo</h5>
-            <br class="card-text">
-            A implementação do método ELI5 faz toda diferença na hora de aprender conceitos e</br>
-            termos mais técnicos, trazendo exemplos de forma simples e de fácil assimilação com o seu dia-a-dia.
+            <p class="card-text">
+              A implementação do método ELI5 faz toda diferença na hora de aprender conceitos e termos mais técnicos, trazendo exemplos de forma simples e de fácil assimilação com o seu dia-a-dia.
             </p>
           </div>
         </div>
@@ -143,11 +158,12 @@
     </div>
   </main>
 
-  <footer class="fixed-bottom bg-light p-1 text-center">
+  <footer class="bg-light p-3 text-center">
     <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
-
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
