add div second section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a href="./assets/view/html/Cadastro.html" class="btn w-100 botao-cor-especial">Cadastro</a>
               </div>
             </article>
-
+          </div>
       </section>
 
       <section class="acordeao-tamanho accordion accordion-flush" id="perguntas">
