update link buttons

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="card-body">
                 <h5 class="card-title">Play anywhere</h5>
                 <p class="card-text">Com o BattleFRONT, você pode resolver os desafios propostos a qualquer hora e de qualquer dispositivo.<br> Leve no seu bolso para <strong>qualquer lugar</strong>!</p>
-                <a href="./assets/view/html/produtos.html" class="btn w-100 botao-cor-especial">Conheça nossos planos</a>
+                <a href="./assets/view/html/produtos.html" class="btn w-100 botao-cor-especial">Planos</a>
               </div>
             </article>
   
@@ -132,7 +132,7 @@
               <div class="card-body">
                 <h5 class="card-title">Totalmente intuitivo</h5>
                 <p class="card-text">A implementação do método ELI5 faz toda diferença na hora de aprender conceitos e termos mais técnicos, trazendo exemplos de forma simples e de <strong>fácil assimilação</strong>.</p>
-                <a href="./assets/view/html/produtos.html" class="btn w-100 botao-cor-especial">Conheça nossos planos</a>
+                <a href="./assets/view/html/produtos.html" class="btn w-100 botao-cor-especial">Planos</a>
               </div>
             </article>
   
