--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
               <li class="nav-item">
                 <a
                   class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
                   href="./assets/view/html/produtos.html"
                   >Serviços</a
                 >
